--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,10 +2,7 @@ name: Build and Verify Container
 on:
   pull_request:
     branches: [ "main" ]
-env:
-  GODOT_VERSION: 4.1.3
-  RELEASE_NAME: stable
-
+    
 jobs:
   determine_version:
     uses: ./.github/workflows/determine-version.yml
@@ -15,8 +12,8 @@ jobs:
     uses: ./.github/workflows/build-image.yml
     with:
       sem_ver: ${{ needs.determine_version.outputs.sem_ver }}
-      godot_version: ${{ env.GODOT_VERSION }}
-      releave_name: ${{ env.RELEASE_NAME }}
+      godot_version: 4.1.3
+      release_name: stable
       release_image: false
 
   build_projects:
