--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -71,9 +71,7 @@ jobs:
           build-args: |
             GODOT_VERSION=${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-        outputs:
-          github_image_name_and_tag: ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }}
-
+            
       - name: Build and Release Docker images to Dockerhub
         if: ${{ inputs.release_image }}
         uses: docker/build-push-action@v2.9.0
@@ -87,5 +85,8 @@ jobs:
           build-args: |
             GODOT_VERSION=${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-        outputs:
-          image_name_and_tag: ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }}
+
+      - name: Collect outputs
+        run: |
+          echo github_image_name_and_tag=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUTS
+          echo image_name_and_tag=${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUTS
