Fix asset import, using new config file paths

--- a/.github/workflows/build-projects.yml
+++ b/.github/workflows/build-projects.yml
@@ -36,13 +36,13 @@ jobs:
         run: env
 
       - name: Show editor settings
-        run: cat ~/.config/godot/editor_settings-4.tres
+        run: cat ~/.config/godot/editor_settings-4.3.tres
 
       - name: Prebuild
         run: |
           mkdir -v -p build/linux
           cd $PROJECT_PATH
-          godot -v -e --quit --headless
+          godot -v --headless --import
 
       - name: Show imported asset directory
         run: ls -la $PROJECT_PATH/.godot/imported
@@ -55,7 +55,7 @@ jobs:
       - name: Linux Build
         run: |
           cd $PROJECT_PATH
-          godot --headless -v --export-release "Linux/X11" ../build/linux/$EXPORT_NAME-${{ inputs.semVer }}.x86_64
+          godot -v --headless --export-release "Linux/X11" ../build/linux/$EXPORT_NAME-${{ inputs.semVer }}.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -80,13 +80,13 @@ jobs:
         run: env
 
       - name: Show editor settings
-        run: cat ~/.config/godot/editor_settings-4.tres
+        run: cat ~/.config/godot/editor_settings-4.3.tres
 
       - name: Prebuild
         run: |
           mkdir -v -p build/windows
           cd $PROJECT_PATH
-          godot -v -e --quit --headless
+          godot -v --headless --import
 
       - name: Show imported asset directory
         run: ls -la $PROJECT_PATH/.godot/imported
@@ -99,7 +99,7 @@ jobs:
       - name: Windows Build
         run: |
           cd $PROJECT_PATH
-          godot --headless -v --export-release "Windows Desktop" ../build/windows/$EXPORT_NAME-${{ inputs.semVer }}.x86_64
+          godot -v --headless --export-release "Windows Desktop" ../build/windows/$EXPORT_NAME-${{ inputs.semVer }}.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
