--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           echo "VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
           echo "LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
+          echo "MONO_VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-mono" >> $GITHUB_ENV
+          echo "MONO_LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-mono" >> $GITHUB_ENV
+          echo "VANILLA_VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-vanilla" >> $GITHUB_ENV
+          echo "VANILLA_LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-vanilla" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
       - name: Login to GitHub Container Registry
@@ -60,7 +64,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker images to Github
+      - name: Build and push Mono Docker images to Github
         uses: docker/build-push-action@v2.9.0
         with:
           context: .
@@ -68,11 +72,12 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }}
+            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.MONO_VERSIONED_IMAGE_TAG }}
           build-args: |
-            GODOT_VERSION=${{ inputs.godot_version }}
+            GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
 
-      - name: Build and Release Docker images to Dockerhub
+      - name: Build and Release Mono Docker images to Dockerhub
         if: ${{ inputs.release_image }}
         uses: docker/build-push-action@v2.9.0
         with:
@@ -81,16 +86,19 @@ jobs:
           push: true
           tags: |
             ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }}
+            ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.MONO_VERSIONED_IMAGE_TAG }}
             ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.LATEST_IMAGE_TAG }}
+            ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.MONO_LATEST_IMAGE_TAG }}
+            
           build-args: |
-            GODOT_VERSION=${{ inputs.godot_version }}
+            GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
 
       - name: Collect outputs
         id: collect_outputs
         run: |
-          echo github_image_name_and_tag=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
-          echo image_name_and_tag=${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
+          echo github_image_name_and_tag=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.MONO_VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
+          echo image_name_and_tag=${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.MONO_VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
     outputs:
       github_image_name_and_tag: ${{ steps.collect_outputs.outputs.github_image_name_and_tag }}
       image_name_and_tag: ${{ steps.collect_outputs.outputs.image_name_and_tag }}
