--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
         include:
           - godot_version: 4.4
             release_name: stable
+          - godot_version: 4.4.1
+            release_name: stable
     needs: determine_version
     uses: ./.github/workflows/build-image.yml
     with:
