--- a/.github/workflows/build-projects.yml
+++ b/.github/workflows/build-projects.yml
@@ -15,11 +15,11 @@ env:
   PROJECT_PATH: test_project
 
 jobs:
-  build_project_linux:
-    name: Build Test Project (Linux)
+  build_project_linux-vanilla:
+    name: Build Vanilla Test Project (Linux)
     runs-on: ubuntu-latest
     container:
-      image: ${{ inputs.build_image }}
+      image: ${{ inputs.build_image }}-vanilla
       env:
         EXPORT_NAME: omnibuilder_test_project
         PROJECT_PATH: test_project
@@ -36,7 +36,7 @@ jobs:
         run: env
 
       - name: Show editor settings
-        run: cat ~/.config/godot/editor_settings-4.4.tres
+        run: cat $GODOT_EDITOR_SETTINGS_PATH
 
       - name: Prebuild
         run: |
@@ -62,11 +62,11 @@ jobs:
           name: ${{ env.EXPORT_NAME }}-${{ inputs.semVer }}-linux
           path: build/linux
 
-  build_project_windows:
-    name: Build Test Project (Windows Desktop)
+  build_project_windows-vanilla:
+    name: Build Vanilla Test Project (Windows Desktop)
     runs-on: ubuntu-latest
     container:
-      image: ${{ inputs.build_image }}
+      image: ${{ inputs.build_image }}-vanilla
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -80,7 +80,98 @@ jobs:
         run: env
 
       - name: Show editor settings
-        run: cat ~/.config/godot/editor_settings-4.4.tres
+        run: cat $GODOT_EDITOR_SETTINGS_PATH
+
+      - name: Prebuild
+        run: |
+          mkdir -v -p build/windows
+          cd $PROJECT_PATH
+          godot -v --headless --import
+
+      - name: Show imported asset directory
+        run: ls -la $PROJECT_PATH/.godot/imported
+
+      - name: Validate that blender files were imported
+        run: |
+          cd $PROJECT_PATH
+          ./validate_imports.sh
+
+      - name: Windows Build
+        run: |
+          cd $PROJECT_PATH
+          godot -v --headless --export-release "Windows Desktop" ../build/windows/$EXPORT_NAME-${{ inputs.semVer }}.x86_64
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.EXPORT_NAME }}-${{ inputs.semVer }}-windows
+          path: build/windows
+
+  build_project_linux-mono:
+    name: Build Mono Test Project (Linux)
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ inputs.build_image }}-mono
+      env:
+        EXPORT_NAME: omnibuilder_test_project
+        PROJECT_PATH: test_project
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+
+      - name: Fix paths for Github
+        run: setup_github_paths.sh
+
+      - name: Show environment
+        run: env
+
+      - name: Show editor settings
+        run: cat $GODOT_EDITOR_SETTINGS_PATH
+
+      - name: Prebuild
+        run: |
+          mkdir -v -p build/linux
+          cd $PROJECT_PATH
+          godot -v --headless --import
+
+      - name: Show imported asset directory
+        run: ls -la $PROJECT_PATH/.godot/imported
+
+      - name: Validate that blender files were imported
+        run: |
+          cd $PROJECT_PATH
+          ./validate_imports.sh
+
+      - name: Linux Build
+        run: |
+          cd $PROJECT_PATH
+          godot -v --headless --export-release "Linux/X11" ../build/linux/$EXPORT_NAME-${{ inputs.semVer }}.x86_64
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.EXPORT_NAME }}-${{ inputs.semVer }}-linux
+          path: build/linux
+
+  build_project_windows-mono:
+    name: Build Mono Test Project (Windows Desktop)
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ inputs.build_image }}-mono
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+
+      - name: Fix paths for Github
+        run: setup_github_paths.sh
+
+      - name: Show environment
+        run: env
+
+      - name: Show editor settings
+        run: cat $GODOT_EDITOR_SETTINGS_PATH
 
       - name: Prebuild
         run: |
