--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -63,6 +63,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push Mono Docker images to Github
         uses: docker/build-push-action@v6
@@ -76,6 +79,8 @@ jobs:
           build-args: |
             GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build and Release Mono Docker images to Dockerhub
         if: ${{ inputs.release_image }}
@@ -93,6 +98,8 @@ jobs:
           build-args: |
             GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build and push Vanilla Docker images to Github
         uses: docker/build-push-action@v6
@@ -105,6 +112,8 @@ jobs:
           build-args: |
             GODOT_VERSION=${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build and Release Vanilla Docker images to Dockerhub
         if: ${{ inputs.release_image }}
@@ -120,6 +129,8 @@ jobs:
           build-args: |
             GODOT_VERSION=${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Collect outputs
         id: collect_outputs
