Fix path for editor settings helper

--- a/.github/workflows/build-projects.yml
+++ b/.github/workflows/build-projects.yml
@@ -70,9 +70,7 @@ jobs:
         run: env
 
       - name: Show editor settings
-        run: |
-          /opt/setup_editor_settings_version.sh
-          cat $GODOT_EDITOR_SETTINGS_PATH
+        run: setup_editor_settings_version.sh && cat $GODOT_EDITOR_SETTINGS_PATH
 
       - name: Prebuild
         run: |
@@ -123,9 +121,7 @@ jobs:
         run: env
 
       - name: Show editor settings
-        run: |
-          /opt/setup_editor_settings_version.sh
-          cat $GODOT_EDITOR_SETTINGS_PATH
+        run: setup_editor_settings_version.sh && cat $GODOT_EDITOR_SETTINGS_PATH
 
       - name: Prebuild
         run: |
