Show env, PATH and HOME in verify tools pipeline

--- a/.github/workflows/build-projects.yml
+++ b/.github/workflows/build-projects.yml
@@ -27,6 +27,12 @@ jobs:
     container:
       image: ${{ matrix.build_image }}
     steps:
+      - name: Show env
+        run: env
+      - name: Show PATH
+        run: echo $PATH
+      - name: Show HOME
+        run: echo $HOME
       - name: Godot
         run: godot --version
       - name: Blender
