--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -68,6 +68,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Mono Docker images to Github
+        if: ${{ ! inputs.release_image }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -79,8 +80,6 @@ jobs:
           build-args: |
             GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
       - name: Build and Release Mono Docker images to Dockerhub
         if: ${{ inputs.release_image }}
@@ -98,10 +97,8 @@ jobs:
           build-args: |
             GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
       - name: Build and push Vanilla Docker images to Github
+        if: ${{ ! inputs.release_image }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -112,8 +109,6 @@ jobs:
           build-args: |
             GODOT_VERSION=${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
       - name: Build and Release Vanilla Docker images to Dockerhub
         if: ${{ inputs.release_image }}
@@ -129,8 +124,6 @@ jobs:
           build-args: |
             GODOT_VERSION=${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
       - name: Collect outputs
         id: collect_outputs
