Parallel build maybe?

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,32 +23,63 @@ on:
     outputs:
       github_image_name_and_tag:
         description: Name and tag of the image that was built
-        value: ${{ jobs.build_image.outputs.github_image_name_and_tag }}
+        value: ${{ jobs.compute_image_tags.outputs.github_image_name_and_tag }}
 
 env:
   IMAGE_NAME: godot4-omnibuilder3d
 jobs:
-  build_image:
-    name: Build Image
+  compute_image_tags:
+    name: Create Image Tag From Godot Version
     runs-on: ubuntu-latest
     steps:
       - name: Write repo owner
         id: write_image_owner
-        run: echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+        run: echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_OUTPUT
 
       - name: Write Image tag from Godot Version
-        run: echo IMAGE_TAG=$(echo ${{ inputs.release_name != 'stable' && format('.{0}', inputs.release_name) || '' }}) >> $GITHUB_ENV
+        run: echo IMAGE_TAG=$(echo ${{ inputs.release_name != 'stable' && format('.{0}', inputs.release_name) || '' }}) >> $GITHUB_OUTPUT
 
       - name: Output image name for test project build
         id: write_image_tag
         run: |
-          echo "VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
-          echo "LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
-          echo "MONO_VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-mono" >> $GITHUB_ENV
-          echo "MONO_LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-mono" >> $GITHUB_ENV
-          echo "VANILLA_VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-vanilla" >> $GITHUB_ENV
-          echo "VANILLA_LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-vanilla" >> $GITHUB_ENV
+          echo "VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+          echo "LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+          echo "MONO_VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-mono" >> $GITHUB_OUTPUT
+          echo "MONO_LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-mono" >> $GITHUB_OUTPUT
+          echo "VANILLA_VERSIONED_IMAGE_TAG=${{ inputs.sem_ver }}-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-vanilla" >> $GITHUB_OUTPUT
+          echo "VANILLA_LATEST_IMAGE_TAG=latest-${{ inputs.godot_version }}${{ env.IMAGE_TAG }}-vanilla" >> $GITHUB_OUTPUT
+          echo github_image_name_and_tag=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
+    outputs:
+      image_owner: ${{ steps.write_image_owner.IMAGE_OWNER }}
+      legacy_versioned_tag: ${{ steps.write_image_tag.VERSIONED_IMAGE_TAG }}
+      legacy_latest_tag: ${{ steps.write_image_tag.LATEST_IMAGE_TAG }}
+      mono_version_tag: ${{ steps.write_image_tag.MONO_VERSIONED_IMAGE_TAG }}
+      mono_latest_tag: ${{ steps.write_image_tag.MONO_LATEST_IMAGE_TAG }}
+      vanilla_version_tag: ${{ steps.write_image_tag.VANILLA_VERSIONED_IMAGE_TAG }}
+      vanilla_latest_tag: ${{ steps.write_image_tag.VANILLA_LATEST_IMAGE_TAG }}
+      github_image_name_and_tag: ${{ steps.collect_outputs.outputs.github_image_name_and_tag }}
 
+  build_image:
+    name: Build Image
+    runs-on: ubuntu-latest
+    needs:
+      - compute_image_tags
+    strategy:
+      matrix:
+        include:
+          - name: .NET Containers
+            godot_version: mono-${{ inputs.godot_version }}
+            tags: |
+              ${{ needs.compute_image_tags.legacy_versioned_tag }}
+              ${{ needs.compute_image_tags.legacy_latest_tag }}
+              ${{ needs.compute_image_tags.mono_version_tag }}
+              ${{ needs.compute_image_tags.mono_latest_tag }}
+          - name: Vanilla Containers
+            godot_version: ${{ inputs.godot_version }}
+            tags: |
+              ${{ needs.compute_image_tags.vanilla_version_tag }}
+              ${{ needs.compute_image_tags.vanilla_latest_tag }}
+    steps:
       - uses: actions/checkout@v5
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -67,21 +98,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Mono Docker images to Github
+      - name: Build and push Docker images to Github
         if: ${{ ! inputs.release_image }}
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: |
-            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }}
-            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.MONO_VERSIONED_IMAGE_TAG }}
+          tags: ${{ matrix.tags }}
           build-args: |
-            GODOT_VERSION=mono-${{ inputs.godot_version }}
+            GODOT_VERSION=${{ matrix.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
 
-      - name: Build and Release Mono Docker images to Dockerhub
+      - name: Build and Release Docker images to Dockerhub
         if: ${{ inputs.release_image }}
         uses: docker/build-push-action@v6
         with:
@@ -97,39 +126,3 @@ jobs:
           build-args: |
             GODOT_VERSION=mono-${{ inputs.godot_version }}
             RELEASE_NAME=${{ inputs.release_name }}
-      - name: Build and push Vanilla Docker images to Github
-        if: ${{ ! inputs.release_image }}
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: |
-            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VANILLA_VERSIONED_IMAGE_TAG }}
-          build-args: |
-            GODOT_VERSION=${{ inputs.godot_version }}
-            RELEASE_NAME=${{ inputs.release_name }}
-
-      - name: Build and Release Vanilla Docker images to Dockerhub
-        if: ${{ inputs.release_image }}
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: |
-            ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VANILLA_VERSIONED_IMAGE_TAG }}
-            ${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VANILLA_LATEST_IMAGE_TAG }}
-            
-          build-args: |
-            GODOT_VERSION=${{ inputs.godot_version }}
-            RELEASE_NAME=${{ inputs.release_name }}
-
-      - name: Collect outputs
-        id: collect_outputs
-        run: |
-          echo github_image_name_and_tag=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
-          echo image_name_and_tag=${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.VERSIONED_IMAGE_TAG }} >> $GITHUB_OUTPUT
-    outputs:
-      github_image_name_and_tag: ${{ steps.collect_outputs.outputs.github_image_name_and_tag }}
-      image_name_and_tag: ${{ steps.collect_outputs.outputs.image_name_and_tag }}
